force-app/main/default/objects/Property__c/fields/Alloted_storage__c.field-meta.xml
<CustomField>
    <fullName>Alloted_storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alloted storage</label>
    <type>Checkbox</type>
</CustomField>