force-app/main/default/objects/Property__c/fields/Approved_By_Finance__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved By Finance</label>
    <type>Checkbox</type>
</CustomField>