force-app/main/default/objects/Property__c/fields/ARC_Construction_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ARC_Construction_Threshold__c</fullName>
    <defaultValue>0.11</defaultValue>
    <description>A percentage value at the Property level for business users to adjust the construction threshold as required. The default value is set to 11%. This is considered for Remedial process to begin.</description>
    <label>Construction Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>