force-app/main/default/objects/Property__c/fields/ARC_Milestone_Progression_Date__c.field-meta.xml
<CustomField>
    <fullName>ARC_Milestone_Progression_Date__c</fullName>
    <label>Milestone Progression Date</label>
    <type>Date</type>
</CustomField>