force-app/main/default/objects/Property__c/fields/ARC_Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>ARC_Min_Amount__c</fullName>
    <label>Min Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>