force-app/main/default/objects/Property__c/fields/Bank_GL__c.field-meta.xml
<CustomField>
    <fullName>Bank_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Properties (Bank GL)</relationshipLabel>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>