force-app/main/default/objects/Property__c/fields/BlockRealConnectPayment__c.field-meta.xml
<CustomField>
    <fullName>BlockRealConnectPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Real Connect Payment</label>
    <type>Checkbox</type>
</CustomField>