force-app/main/default/objects/Property__c/fields/BTS_ANTICIPATED_HANDOVER_DATE__c.field-meta.xml
<CustomField>
    <fullName>BTS_ANTICIPATED_HANDOVER_DATE__c</fullName>
    <label>Anticipated handover date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>