force-app/main/default/objects/Property__c/fields/Building_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Building_Name_Arabic__c</fullName>
    <label>Building Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>