force-app/main/default/objects/Property__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <label>Commissions Amount (Millions)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>