force-app/main/default/objects/Property__c/fields/Commission_Cap__c.field-meta.xml
<CustomField>
    <fullName>Commission_Cap__c</fullName>
    <label>Commission Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>