force-app/main/default/objects/Property__c/fields/Commission_Cap_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Cap_Percentage__c</fullName>
    <label>Commission Cap %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>