force-app/main/default/objects/Property__c/fields/Commission_Cap_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Cap_Start_Date__c</fullName>
    <label>Commission Cap % Start Date</label>
    <type>Date</type>
</CustomField>