force-app/main/default/objects/Property__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>Meraas</fullName>
            </value>
            <value>
                <fullName>Nakheel</fullName>
            </value>
            <value>
                <fullName>Meydan</fullName>
            </value>
            <value>
                <fullName>District One</fullName>
            </value>
            <value>
                <fullName>Limitless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>