force-app/main/default/objects/Property__c/fields/Construction_Update_Sent__c.field-meta.xml
<CustomField>
    <fullName>Construction_Update_Sent__c</fullName>
    <label>Construction Update Sent</label>
    <type>Date</type>
</CustomField>