force-app/main/default/objects/Property__c/fields/Construction_Updates_Link__c.field-meta.xml
<CustomField>
    <fullName>Construction_Updates_Link__c</fullName>
    <label>Construction Updates Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>