force-app/main/default/objects/Property__c/fields/Current_anticipated_handover_date__c.field-meta.xml
<CustomField>
    <fullName>Current_anticipated_handover_date__c</fullName>
    <label>Current anticipated handover date</label>
    <type>Date</type>
</CustomField>