force-app/main/default/objects/Property__c/fields/DHRE_Construction_Percent__c.field-meta.xml
<CustomField>
    <fullName>DHRE_Construction_Percent__c</fullName>
    <label>DHRE Construction Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>