force-app/main/default/objects/Property__c/fields/DLD_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>DLD_Area_Name__c</fullName>
    <label>DLD Area Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>