force-app/main/default/objects/Property__c/fields/DLD_CAP_Percentage__c.field-meta.xml
<CustomField>
    <fullName>DLD_CAP_Percentage__c</fullName>
    <label>DLD CAP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>