force-app/main/default/objects/Property__c/fields/DLD_CAP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DLD_CAP_Start_Date__c</fullName>
    <label>DLD CAP % Start Date</label>
    <type>Date</type>
</CustomField>