force-app/main/default/objects/Property__c/fields/DLD_Property_Id__c.field-meta.xml
<CustomField>
    <fullName>DLD_Property_Id__c</fullName>
    <label>DLD Property Id</label>
    <type>TextArea</type>
</CustomField>