force-app/main/default/objects/Property__c/fields/EFFECTIVE_TO__c.field-meta.xml
<CustomField>
    <fullName>EFFECTIVE_TO__c</fullName>
    <description>To capture the date of effective to from NKL System, created for Nexus Migration</description>
    <label>EFFECTIVE TO</label>
    <type>Date</type>
</CustomField>