force-app/main/default/objects/Property__c/fields/ERP_Property_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Property_Id__c</fullName>
    <description>Created for Nexus migration, To capture ERP Building Id from NKL system</description>
    <label>ERP Property Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>