force-app/main/default/objects/Property__c/fields/Exclude_Accrual_Interface_to_Fusion__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Accrual_Interface_to_Fusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Commission Accrual Interface</label>
    <type>Checkbox</type>
</CustomField>