force-app/main/default/objects/Property__c/fields/Exclude_DLD_Interface_to_Fusion__c.field-meta.xml
<CustomField>
    <fullName>Exclude_DLD_Interface_to_Fusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude DLD Interface to Fusion</label>
    <type>Checkbox</type>
</CustomField>