force-app/main/default/objects/Property__c/fields/Exclude_Transfer_Of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Transfer_Of_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Transfer Of Funds</label>
    <type>Checkbox</type>
</CustomField>