force-app/main/default/objects/Property__c/fields/External_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>External_SF_ID__c</fullName>
    <description>To capture the SF Id from external system, created for Nexus migration</description>
    <label>External SF ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>