force-app/main/default/objects/Property__c/fields/FactSheet_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>FactSheet_Project_Name__c</fullName>
    <description>To Populate the FactSheet Project Name on Booking Form as we can&apos;t use standered Project Name Because the FactSheet Project Name is we can display as per the Business</description>
    <label>FactSheet Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>