force-app/main/default/objects/Property__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>Meraas</fullName>
            </value>
            <value>
                <fullName>Shamal</fullName>
            </value>
            <value>
                <fullName>DHRE 2.0X</fullName>
            </value>
            <value>
                <fullName>Nakheel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>