force-app/main/default/objects/Property__c/fields/Handover_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Handover_Percentage__c</fullName>
    <label>Handover Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>