force-app/main/default/objects/Property__c/fields/InvoiceBankUnique__c.field-meta.xml
<CustomField>
    <fullName>InvoiceBankUnique__c</fullName>
    <formula>Invoices_Bank__c + &apos;-&apos; +  PropertyCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceBankUnique</label>
    <type>Text</type>
</CustomField>