force-app/main/default/objects/Property__c/fields/Invoices_Bank__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Bank__c</fullName>
    <label>Invoices_Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>