force-app/main/default/objects/Property__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>This field is used to capture the Project (technically - Property) Launch Date</description>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>