force-app/main/default/objects/Property__c/fields/Lead_Last_Project_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Project_of_Interest__c</fullName>
    <label>Lead Last Project of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>