force-app/main/default/objects/Property__c/fields/Marketing_Cap__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cap__c</fullName>
    <label>Marketing Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>