force-app/main/default/objects/Property__c/fields/MiscBankUnique__c.field-meta.xml
<CustomField>
    <fullName>MiscBankUnique__c</fullName>
    <formula>Misc_Charges_Bank__c + &apos;-&apos; +  PropertyCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiscBankUnique</label>
    <type>Text</type>
</CustomField>