force-app/main/default/objects/Property__c/fields/Notes_Receivables_GL__c.field-meta.xml
<CustomField>
    <fullName>Notes_Receivables_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notes Receivables GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>