force-app/main/default/objects/Property__c/fields/Number_Of_Delays__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Delays__c</fullName>
    <label>Number Of Delays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>