force-app/main/default/objects/Property__c/fields/Payment_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Name__c</fullName>
    <label>Payment Plan Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>