force-app/main/default/objects/Property__c/fields/Permitted_Use__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Use__c</fullName>
    <label>Permitted Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>