force-app/main/default/objects/Property__c/fields/Permitted_Use_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Use_Arabic__c</fullName>
    <label>Permitted Use (Arabic)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>