force-app/main/default/objects/Property__c/fields/Project_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Project_Inv__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project 18 Digit ID</label>
    <type>Text</type>
</CustomField>