force-app/main/default/objects/Property__c/fields/Project_Name_Report__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Report__c</fullName>
    <label>Project Name Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>