force-app/main/default/objects/Property__c/fields/Property_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Property_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property ID 18</label>
    <type>Text</type>
</CustomField>