force-app/main/default/objects/Property__c/fields/Property_Name_BF_Ar__c.field-meta.xml
<CustomField>
    <fullName>Property_Name_BF_Ar__c</fullName>
    <description>To Populate the Property Name on Booking Form as we can&apos;t use standered property name Because the Property Name is we can display as per the Business</description>
    <label>Property Name BF Ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>