force-app/main/default/objects/Property__c/fields/Property_Name_BF_SPA_AR__c.field-meta.xml
<CustomField>
    <fullName>Property_Name_BF_SPA_AR__c</fullName>
    <label>Property Name BF-SPA-AR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>