force-app/main/default/objects/Property__c/fields/Property_Name_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Property_Name_in_Arabic__c</fullName>
    <label>Property Name in Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>