force-app/main/default/objects/Property__c/fields/PropertyCode__c.field-meta.xml
<CustomField>
    <fullName>PropertyCode__c</fullName>
    <label>Property Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>