force-app/main/default/objects/Property__c/fields/Reporting_Entity__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Entity__c</fullName>
    <label>Reporting Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>Meraas</fullName>
            </value>
            <value>
                <fullName>DHRE 2.0X</fullName>
            </value>
            <value>
                <fullName>Shamal</fullName>
            </value>
            <value>
                <fullName>Jumeirah</fullName>
            </value>
            <value>
                <fullName>Nakheel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>