force-app/main/default/objects/Property__c/fields/Rera_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Rera_Inspection_Date__c</fullName>
    <label>Rera Inspection Date</label>
    <type>Date</type>
</CustomField>