force-app/main/default/objects/Property__c/fields/RERA_Updated__c.field-meta.xml
<CustomField>
    <fullName>RERA_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RERA Updated</label>
    <type>Checkbox</type>
</CustomField>