force-app/main/default/objects/Property__c/fields/Service_Charge_Cap__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Cap__c</fullName>
    <label>Service Charge Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>