force-app/main/default/objects/Property__c/fields/Skip_Auto_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Skip_Auto_Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Auto Rejection</label>
    <type>Checkbox</type>
</CustomField>