force-app/main/default/objects/Property__c/fields/SPA_Threshold__c.field-meta.xml
<CustomField>
    <fullName>SPA_Threshold__c</fullName>
    <description>This field will be used for the resell journey, allowing only one customer to resell the unit once a specified threshold is met.</description>
    <label>SPA Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>