force-app/main/default/objects/Property__c/fields/TAX__c.field-meta.xml
<CustomField>
    <fullName>TAX__c</fullName>
    <description>To capture Tax from NKL system, created for Nexus migration</description>
    <label>TAX</label>
    <length>20</length>
    <type>Text</type>
</CustomField>