force-app/main/default/objects/Property__c/fields/TAX_REGIME_CODE__c.field-meta.xml
<CustomField>
    <fullName>TAX_REGIME_CODE__c</fullName>
    <description>To capture the Tax Regime Code form NKL System, created for Nexus Migration</description>
    <label>TAX_REGIME_CODE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>