force-app/main/default/objects/Property__c/fields/Terrace__c.field-meta.xml
<CustomField>
    <fullName>Terrace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded Units-BD</label>
    <type>Checkbox</type>
</CustomField>