force-app/main/default/objects/Property__c/fields/Thw_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Thw_Property_Code__c</fullName>
    <label>Thw Property Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>