force-app/main/default/objects/Property__c/fields/Trust_Account__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account__c</fullName>
    <label>Trust Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>