force-app/main/default/objects/Property__c/fields/Type_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Property__c</fullName>
    <label>Type of Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>