force-app/main/default/objects/Property__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT</label>
    <referenceTo>VAT__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>